--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,9 +1,9 @@
-$primary-color: #ffffff;
+$primary-color: rgb(0, 0, 192);
 
 body {
     font-family: 'Cabin', sans-serif;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
-    color: yellow;
+    color: rgb(0, 0, 192);
     background: url("../images/bg.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -136,7 +136,7 @@ Social media section
 */
 .social-media-wrapper {
     margin-top: 30px;
-    margin-bottom: 80px;
+    margin-bottom: 10px;
     font-size: 25px;
 
     & a {
@@ -156,4 +156,8 @@ Footer and copyright section
 .copyright {
     margin: 30px 0px 20px 0px;
     color: $primary-color;
+}
+
+.link {
+    margin-right: 0px;
 }
