--- a/css/custom.scss
+++ b/css/custom.scss
@@ -159,5 +159,15 @@ Footer and copyright section
 }
 
 .link {
+    position: relative;
+    display: inline-block;
     margin-right: 0px;
+    height: 30px;
+}
+
+.producthunt-logo {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 7px;
 }
