feat: add social media links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
+  <!-- fontawesome -->
+  <script src="https://use.fontawesome.com/3db7fc1628.js"></script>
+  <!-- google font -->
+  <link href='https://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles.css">
+  {% seo %}
 </head>
 
 <body>
